# rent_radar

./: .env.example  AGENTS.md  CLAUDE.md  Dockerfile  README.md  ROADMAP_MCP_CHECKLIST.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json  test_main.http
.codex/environments/: environment.toml
alembic/: env.py  script.py.mako
alembic/versions/: 20260207_0001_phase1_initial.py  20260208_0002_fix_null_duplicates.py  20260213_add_snapshot_columns_to_favorites.py  (+3 more)
scripts/: build_zigbang_representative_fixture.py  e2e_mcp_search_rent_check.py  e2e_naver_mcp_check.py  e2e_zigbang_mcp_check.py  e2e_zigbang_mcp_tool_suite.py  generate_region_codes.py  manual_mcp_region_checks.py  manual_prepare_mcp_live_data.py  manual_seed_mcp_region_test_data.py  observe_naver_429.py  smoke_naver_live_crawl.py  smoke_zigbang_live_crawl.py
src/: __init__.py  cache.py  main.py
src/config/: __init__.py  settings.py  (+1 more)
tests/: conftest.py  test_e2e_naver_mcp_check.py  test_e2e_zigbang_mcp_tool_suite.py  test_listing_service.py  test_manual_prepare_mcp_live_data.py  test_mcp_allowlist.py  test_mcp_compare_listings.py  test_mcp_favorite_tools.py  test_mcp_price_tools.py  test_mcp_recommendation.py  test_mcp_region_tools.py  test_mcp_search_rent.py  test_naver_crawler.py  test_observe_naver_429.py  test_place_query_resolver.py  test_qa_service.py  test_recommendation_service.py  test_region_codes.py  test_safety_service.py  test_smoke_naver_live_crawl.py  test_smoke_zigbang_live_crawl.py  test_tasks.py  test_tools.py  test_web_router_qa.py  test_zigbang_crawler.py
(+68 files in other folders)
